ERR_NAME_NOT_RESOLVED refers to "DNS address" instead of "IP address".

ERR_NAME_NOT_RESOLVED should refer to "IP address" for
a better understanding in case of Page not exist error.

BUG=765338


Change-Id: I9669c393e6c1c0f3cd73857010245e8dcc5fa7d1
Reviewed-on: https://chromium-review.googlesource.com/668380
Reviewed-by: Julia Tuttle <juliatuttle@chromium.org>
Commit-Queue: srirama chandra sekhar <srirama.m@samsung.com>
Cr-Commit-Position: refs/heads/master@{#504907}
Former-commit-id: 928d0a4587a3fb7b51cda85afcd877d31844887a